[package]
name = "pulsarrow"
version = "0.1.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

[dependencies]
arrow = { version = "1.0", default-features = false, features = ["prettyprint"] }
futures = "0.3"
pulsar = { version = "1", default-features = false, features = ["tokio-runtime"] }
rand = { version = "0.7", default-features = false }
tokio = "1.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "serde"
harness = false
